--- a/amg-reader/src/pages/category-list/category-list.html
+++ b/amg-reader/src/pages/category-list/category-list.html
@@ -1,18 +1,14 @@
-<!--
-  Generated template for the CategoryListPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>category-list</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Category List</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
+  <h3>CATEGORY LIST</h3>
 
+  
 </ion-content>
