--- a/amg-reader/src/pages/category-list/category-list.html
+++ b/amg-reader/src/pages/category-list/category-list.html
@@ -8,7 +8,11 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>CATEGORY LIST</h3>
 
-  
+ <ion-card *ngFor = "let category of categories">
+    <ion-card-content>
+        <div class="category-text">{{category.title}}</div>
+      </ion-card-content>
+  </ion-card>  
+
 </ion-content>
