--- a/amg-reader/src/pages/blog-detail/blog-detail.html
+++ b/amg-reader/src/pages/blog-detail/blog-detail.html
@@ -4,15 +4,18 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
 
-  <ion-navbar>
-    <ion-title>blog-detail</ion-title>
-  </ion-navbar>
+<ion-content>
+    <ion-navbar>
+    </ion-navbar>
 
-</ion-header>
+    <div class="imageContainer">
+        <img src="{{post.image_url}}" alt="">
+    </div>
 
+    <h1 class="title">{{post.title}}</h1>
 
-<ion-content padding>
+    <div class="content" Markdown [innerHTML]="post.content | safeHtml">
+    </div>
 
 </ion-content>
