--- a/amg-reader/src/pages/blog-detail/blog-detail.html
+++ b/amg-reader/src/pages/blog-detail/blog-detail.html
@@ -5,9 +5,12 @@
   Ionic pages and navigation.
 -->
 
-<ion-content>
+<ion-header>
     <ion-navbar>
     </ion-navbar>
+</ion-header>
+
+<ion-content>
 
     <div class="imageContainer">
         <img src="{{post.image_url}}" alt="">
@@ -15,7 +18,21 @@
 
     <h1 class="title">{{post.title}}</h1>
 
+    <div style="text-align: center; opacity: 0.5;">{{post.author_name}} | {{post.created | date}}</div>
+
     <div class="content" Markdown [innerHTML]="post.content | safeHtml">
     </div>
 
 </ion-content>
+
+<ion-footer no-border>
+
+    <ion-toolbar>
+
+        <ion-icon ios="ios-share-outline"
+                  md="md-share"
+                  (click)="share()"></ion-icon>
+
+    </ion-toolbar>
+
+</ion-footer>
