--- a/amg-reader/src/pages/category-list/category-list.html
+++ b/amg-reader/src/pages/category-list/category-list.html
@@ -10,7 +10,10 @@
 <ion-content class="card-background-page">
 
  <ion-card *ngFor = "let category of categories" (click)="goToBlogList(category.slug)">
+   
         <img src="../assets/imgs/card-saopaolo.png"/>
+        <!-- Uncomment this when we have images provided from API -->
+        <!-- <img src="{{category.image_url}}"/> -->
         <div class="card-title">{{category.title}}</div>  
         <div class="card-subtitle">{{category.description}}</div>
   </ion-card>  
