--- a/amg-reader/src/pages/photoblog-detail/photoblog-detail.html
+++ b/amg-reader/src/pages/photoblog-detail/photoblog-detail.html
@@ -1,18 +1,40 @@
 <!--
-  Generated template for the PhotoblogDetailPage page.
+  Generated template for the BlogDetailPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
+
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>photoblog-detail</ion-title>
-  </ion-navbar>
-
+    <ion-navbar>
+    </ion-navbar>
 </ion-header>
 
+<base href="http://amglaurier.com">
 
-<ion-content padding>
+<ion-content>
+
+    <div class="imageContainer">
+        <img src="{{post.image_url}}" alt="">
+    </div>
+
+    <h1 class="title">{{post.title}}</h1>
+
+    <div style="text-align: center; opacity: 0.5;">{{post.author_name}} | {{post.created | date}}</div>
+
+    <div class="content" Markdown [innerHTML]="post.content | safeHtml">
+    </div>
 
 </ion-content>
+
+<ion-footer no-border>
+
+    <ion-toolbar>
+
+        <ion-icon ios="ios-share-outline"
+                  md="md-share"
+                  (click)="share()"></ion-icon>
+
+    </ion-toolbar>
+
+</ion-footer>
