--- a/amg-reader/src/pages/photoblog-list/photoblog-list.html
+++ b/amg-reader/src/pages/photoblog-list/photoblog-list.html
@@ -1,18 +1,42 @@
 <!--
-  Generated template for the PhotoblogListPage page.
+  Generated template for the BlogListPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>photoblog-list</ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title>{{model.title}}</ion-title>
+    </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+    <div class="postPreviewContainer" *ngFor="let post of model.posts">
+        <ion-card (click)="viewPost(post)">
+            <div class="content info">
+                <div class="metadata">{{post.created | date}}</div>
+                <div class="divider"></div>
+                <div class="title">{{post.title}}</div>
+            </div>
+
+            <div class="content image">
+                <img src="{{post.image_url}}" alt="" style="width: 100%">
+            </div>
+        </ion-card>
+    </div>
+
+    <ion-infinite-scroll (ionInfinite)="loadNextPosts($event)" *ngIf="model.nextPage">
+        <ion-infinite-scroll-content loadingSpinner="bubbles"
+                                     loadingText="Loading more data...">
+
+        </ion-infinite-scroll-content>
+    </ion-infinite-scroll>
 
 </ion-content>
