added in-app magazine reader to app

--- a/amg-reader/src/pages/home/home.html
+++ b/amg-reader/src/pages/home/home.html
@@ -21,7 +21,7 @@
                         <div class="title">{{post.title}}</div>
                         <div class="metadata">
                             <span>{{post.author_name}}</span>
-                            <span style="float:right">{{post.category_title}} | {{post.created | date}}</span>
+                            <span style="float:left">{{post.category_title}} | {{post.created | date}}</span>
                         </div>
                     </div>
                 </div>
