--- a/amg-reader/src/pages/magazine-list/magazine-list.html
+++ b/amg-reader/src/pages/magazine-list/magazine-list.html
@@ -6,13 +6,37 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>magazine-list</ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title>Magazines</ion-title>
+    </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+    <div class="postPreviewContainer" *ngFor="let issue of model.issues">
+        <ion-card (click)="viewIssue(issue)">
+            <div class="content info">
+                <div class="metadata">{{issue.title}}</div>
+                <div class="divider"></div>
+            </div>
+
+            <div class="content image">
+                <img src="{{issue.image_url}}" alt="" style="width: 100%">
+            </div>
+        </ion-card>
+    </div>
+
+    <ion-infinite-scroll (ionInfinite)="loadNextPosts($event)" *ngIf="model.nextPage">
+        <ion-infinite-scroll-content loadingSpinner="bubbles"
+                                     loadingText="Loading more data...">
+
+        </ion-infinite-scroll-content>
+    </ion-infinite-scroll>
+
 
 </ion-content>
