Fixed styling for homepage and improved blog list + photoblog list + magazine list

--- a/amg-reader/src/pages/blog-list/blog-list.html
+++ b/amg-reader/src/pages/blog-list/blog-list.html
@@ -16,20 +16,22 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class="grey-background">
 
     <div class="postPreviewContainer" *ngFor="let post of model.posts">
         <ion-card (click)="viewPost(post)">
+                <div class="content image">
+                        <img src="{{post.image_url}}" alt="" style="width: 100%">
+                    </div>
             <div class="content info">
+                
+
                 <div class="title">{{post.title}}</div>
                 <div class="metadata">{{post.category_title}} | {{post.created | date}}</div>
-                <div class="divider"></div>
-            </div>
-
-            <div class="content image">
-                <img src="{{post.image_url}}" alt="" style="width: 100%">
+                
             </div>
         </ion-card>
+        <br>
     </div>
 
     <ion-infinite-scroll (ionInfinite)="loadNextPosts($event)" *ngIf="model.nextPage">
