--- a/amg-reader/src/pages/photoblog-detail/photoblog-detail.html
+++ b/amg-reader/src/pages/photoblog-detail/photoblog-detail.html
@@ -31,7 +31,7 @@
 
     <ion-toolbar>
 
-        <ion-icon ios="ios-share-outline"
+        <ion-icon class="share-button" ios="ios-share-outline"
                   md="md-share"
                   (click)="share()"></ion-icon>
 
