--- a/amg-reader/src/pages/blog-detail/blog-detail.html
+++ b/amg-reader/src/pages/blog-detail/blog-detail.html
@@ -29,7 +29,7 @@
 
     <ion-toolbar>
 
-        <ion-icon ios="ios-share-outline"
+        <ion-icon class="share-button" ios="ios-share-outline"
                   md="md-share"
                   (click)="share()"></ion-icon>
 
