--- a/amg-reader/src/pages/magazine-list/magazine-list.html
+++ b/amg-reader/src/pages/magazine-list/magazine-list.html
@@ -14,18 +14,20 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class="grey-background">
     <div class="postPreviewContainer" *ngFor="let issue of model.issues">
         <ion-card (click)="viewIssue(issue)">
-            <div class="content info">
-                <div class="metadata">{{issue.title}}</div>
+                <div class="content image">
+                        <img src="{{issue.image_url}}" alt="" style="width: 100%">
+                    </div>
+            <!-- <div class="content info">
+                <div class="title">{{issue.title}}</div>
                 <div class="divider"></div>
-            </div>
+            </div> -->
 
-            <div class="content image">
-                <img src="{{issue.image_url}}" alt="" style="width: 100%">
-            </div>
+           
         </ion-card>
+        <br>
     </div>
 
     <ion-infinite-scroll (ionInfinite)="loadNextPosts($event)" *ngIf="model.nextPage">
