--- a/amg-reader/src/pages/home/home.html
+++ b/amg-reader/src/pages/home/home.html
@@ -10,100 +10,92 @@
 </ion-header>
 
 <ion-content class="grey-background">
-    <ion-grid>
-        <ion-row>
-            <ion-col col-12 class="white-background">
-                <div class="title header-title">Blogs</div>
-                <hr>
-                <!-- <br> -->
-                <div class="latest-post" *ngFor="let post of model.blogPosts; let latest=first;">
-                    <div *ngIf="latest" (click)="viewPost(post)">
-                        <img src="{{post.image_url}}" alt="" style="width: 100%">
-                        <div class="title">{{post.title}}</div>
-                        <div class="metadata">
-                            <div>{{post.author_name}}</div>
-                            <span style="float:left">{{post.category_title}}</span>
-                                <span style="float:right">{{post.created | date}}</span>
-                        </div>
-                    </div>
-                </div>
-                <br>
-                <hr>
-            </ion-col>
-        </ion-row>
-        <!-- <hr> -->
 
-        <div class="white-background" *ngFor="let post of model.blogPosts; let latest=first;">
-            <div *ngIf="!latest" (click)="viewPost(post)">
-                <ion-row class="other-articles">
-                    <ion-col col-9>
-                        <div class="small-title">{{post.title}}</div>
-                        <div class="small-metadata">
-                            <div>{{post.author_name}}</div>
-                            <div>{{post.category_title}} | {{post.created | date}}</div>
-                        </div>
-                    </ion-col>
-                    <ion-col col-3>
-                        <img class="small-image" src="{{post.image_url}}">
-                    </ion-col>
-                </ion-row>
-                <hr>
+    <div class="divider-title">Latest Blogs</div>
+
+    <div class="main-item custom-card blog-item latest-post"
+         (click)="viewPost(model.blogPosts.first)"
+         [style.background]="'url(' + model.blogPosts.first.image_url + ')'"
+         [style.background-size]="'cover'"
+         *ngIf="model.blogPosts.first != null">
+
+        <div class="content-container">
+            <div class="content">
+                <div class="title">{{model.blogPosts.first.title}}</div>
+                <div class="metadata">
+                    <br>
+                    <div>Written by {{model.blogPosts.first.author_name || "Anonymous"}}</div>
+                    <span style="">{{model.blogPosts.first.category_title}} | {{model.blogPosts.first.created | date}}</span>
+                </div>
             </div>
         </div>
 
-        <br>
+    </div>
 
-        <ion-row>
-            <ion-col col-12 class="white-background">
-                <div class="title">Photography</div>
-                <hr>
-                <!-- <br> -->
-                <div class="latest-post" *ngFor="let photoPost of model.photoPosts; let latestPhoto=first;">
-                    <div *ngIf="latestPhoto" (click)="viewPhotoPost(photoPost)">
-                        <img src="{{photoPost.image_url}}" style="width: 100%">
-                        <div class="title">{{photoPost.title}}</div>
-                        <div class="metadata">
-                            <span>{{photoPost.author_name}}</span>
-                            <span style="float:right">{{photoPost.created | date}}</span>
-                        </div>
-                    </div>
+    <div class="secondary-item custom-card blog-item"
+         (click)="viewPost(post)"
+         [style.background]="'url(' + post.image_url + ')'"
+         [style.background-size]="'cover'"
+         *ngFor="let post of model.blogPosts.rest">
+
+        <div class="content-container">
+            <div class="content">
+                <div class="title">{{post.title}}</div>
+                <div class="metadata">
+                    <div>{{post.category_title}}</div>
+                    <div>{{post.created | date}}</div>
                 </div>
-                <hr>
-            </ion-col>
-        </ion-row>
-
-        <div class="white-background" *ngFor="let photoPost of model.photoPosts; let latestPhoto=first;">
-            <div *ngIf="!latestPhoto" (click)="viewPhotoPost(photoPost)">
-                <ion-row class="other-articles">
-                    <ion-col col-9>
-                        <div class="small-title">{{photoPost.title}}</div>
-                        <div class="small-metadata">
-                            <div>{{photoPost.author_name}}</div>
-                            <div>{{photoPost.created | date}}</div>
-                        </div>
-                    </ion-col>
-                    <ion-col col-3>
-                        <img class="small-image" src="{{photoPost.image_url}}">
-                    </ion-col>
-                </ion-row>
-                <hr>
             </div>
         </div>
 
-        <br>
-        <ion-row>
-            <ion-col col-12 class="white-background">
-                <div class="title">Magazines</div>
-                <hr>
-                <!-- <br> -->
-                <div class="latest-post" *ngFor="let issue of model.issues; let latestIssue=first;">
-                    <div *ngIf="latestIssue" (click)="viewIssue(issue)">
-                        <img src="{{issue.image_url}}" alt="" style="width: 100%">
-                    </div>
-                </div>
-                <hr>
-            </ion-col>
-        </ion-row>
+    </div>
 
-    </ion-grid>
+    <div class="divider-title">Latest Photography Blogs</div>
+
+    <div class="main-item custom-card blog-item"
+         [style.background]="'url(' + model.photoPosts.first.image_url + ')'"
+         [style.background-size]="'cover'"
+         *ngIf="model.photoPosts.first"
+         (click)="viewPost(model.photoPosts.first)">
+
+        <div class="content-container">
+            <div class="content">
+                <div class="title">{{model.photoPosts.first.title}}</div>
+                <div class="metadata">
+                    <div>{{model.photoPosts.first.created | date}}</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="secondary-item custom-card blog-item"
+         *ngFor="let photoPost of model.photoPosts.rest"
+         [style.background]="'url(' + photoPost.image_url + ')'"
+         [style.background-size]="'cover'"
+         (click)="viewPost(photoPost)">
+        <!--<img src="{{photoPost.image_url}}">-->
+        <div class="content-container">
+            <div class="content">
+                <div class="title">{{photoPost.title}}</div>
+                <div class="metadata">
+                    <div>{{photoPost.created | date}}</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="divider-title">Latest Magazine Issue</div>
+
+    <div class="magazine-issue"
+         *ngIf="model.issues.first"
+         (click)="viewPost(model.issues.first)">
+
+        <div class="content-container">
+            <div class="content">
+                <img src="{{model.issues.first.image_url}}" alt="" style="width: 100%">
+                <div class="title">{{model.issues.first.title}}</div>
+            </div>
+        </div>
+    </div>
+
 </ion-content>
