Android Production release

--- a/amg-reader/src/pages/magazine-list/magazine-list.html
+++ b/amg-reader/src/pages/magazine-list/magazine-list.html
@@ -28,7 +28,7 @@
 
     <div class="magazine-issue"
          *ngFor="let issue of model.issues"
-         (click)="viewPost(issue)">
+         (click)="viewIssue(issue)">
 
         <div class="content-container">
             <div class="content">
